--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = django_app_permissions
-version = 0.0.0
-description = More advanced features for the Django Rest Framework rest_framework.authtoken app
+version = 0.1.0
+description = Automatic app groups for django.
 long_description = file: README.rst
 url = https://github.com/amp89/django-app-permissions
 author = Alex Peterson
