--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -17,6 +17,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
+        skip_existing:  true
         python-version: '3.x'
     - name: Install dependencies
       run: |
